--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,12 @@
   color: #f1356d;
   margin-bottom: 8px;
 }
+.post-preview p {
+  font-size: 13px;
+  margin-bottom: 8px;
+  font-style: italic;
+  font-weight: bold;
+}
 .post-preview a {
   text-decoration: none;
 }
@@ -58,9 +64,21 @@
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 10px;
+  
+}
+.post-details p {
+  font-style: italic;
+  font-weight: bold;
+  font-size: 14px;
+}
+.resume{
+  margin-top : 4px;
 }
 .post-details div {
-  margin: 20px 0;
+  margin: 18px 0;
+  line-height : 25px;
+  text-align : justify;
+  font-size: 16px;
 }
 .post-details button {
   background: #f1356d;
@@ -87,6 +105,15 @@
 }
 .create input, .create textarea, .create select {
   width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.create textarea {
+  width: 100%;
+  height: 150px;
   padding: 6px 10px;
   margin: 10px 0;
   border: 1px solid #ddd;
